--- a/mainpage.html
+++ b/mainpage.html
@@ -139,7 +139,7 @@ transform: translateY(-17px)
   <header>
     <nav>
       <ul>
-        <li><a  class="homepag" href="homepage.html">Home</a></li>
+        <li><a  class="homepag" href="index.html">Home</a></li>
         <li><a class="review" href="reviews.html">Reviews</a></li>
       </ul>
     </nav>
